--- a/index.html
+++ b/index.html
@@ -1,242 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<body style = "background-color:rgb(240, 240, 240);">
-        <head>
-            <!-- <meta name = "viewport" content = "width = device-width, initial-scale= 1.0" /> -->
-            <title> 
-                管理資訊系統 期末
-            </title> <!-- 網頁名稱 -->
-        </head> 
-        <style>
-        h1 {
-            color:red;
-            font-size:40pt;
-        }
-        </style>
-        <h1 align = center> 
-            期末報告
-            <!-- <img src="https://ppt.cc/fY9tFx@.png" alt="My picture" width = "100" height = "100" align = "right" > -->
-        </h1>
-        <a href = "https://public.tableau.com/views/_16376599020520/6?:language=zh-TW&:retry=yes&publish=yes&:display_count=n&:origin=viz_share_link">
-            <p style = "font-size:18pt">
-                tableau public
-            </p>
-        </a> <!-- <a href = "網址">超連結名字</a></li>  -->
-        <p style = "font-size:18pt"> 網頁瀏覽次數 :
-            <br> <!-- 換行 -->
-            <img width = 100 src="https://hitwebcounter.com/counter/counter.php?page=7922826&style=0006&nbdigits=3&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>  
-        </p>
-        <hr> <!-- 分隔線 -->
-        <!-- 本文瀏覽次數: <script type="text/javascript" language="Javascript" src="C:\Users\quanbro\Desktop\Programming\Website\Test\article_counter.php"></script> -->
-        <p style = "color:red;font-size:40pt">
-            <b>
-                目錄
-            </b> 
-        </p>
-        <hr>
-        <ol type = "I" style = "font-size:20pt"> <!-- 項目欄 -->
-        <!-- <li> 我是項目的標籤 </li>  項目欄的標籤 -->
-            <li>
-                <I>
-                    <a href = "#content">台灣民眾對中醫的熱忱不再</a>
-                </I>
-            </li> 
-            <li> 
-                <I>
-                    <a href = "#content1">探討神經及中醫科的患者女性大於男性原因</a>
-                </I>
-            </li>
-            <li>
-                <I>
-                    <a href = "#content2">冬季及換季時患者明顯增加的科別</a>
-                </I>
-            </li>
-            <li>
-                <I>
-                    <a href = "#content3">名間鄉預防保健的人數比例較高之原因</a>
-                </I>
-            </li>
-            <li>
-                <I>
-                    <a href = "#content4">中高年齡族群易得的疾病以及其併發症</a>
-                </I>
-            </li>
-        </ol>
-        <hr>
-        <p id = "content" style = "font-size:24pt">
-            <b>
-                I. 台灣民眾對中醫的熱忱不再
-            </b>
-        </p>
-        <p style = "font-size:18pt;">
-            為了更好地了解不同疾病的人數，我們製作了依照顏色區分的長條圖。
-            <br>
-            並且區隔不同年份的數據，以便比較出不同年份的各種疾病數量的增減。
-            <br>
-            其中，我們發現
-            <span style = "color:Orange;">
-                中醫
-            </span>
-            的患者有逐年下降的趨勢。
-            <br>
-            雖然台灣有著非常良好的教育資源，每年也都培養出了許多中醫人才，也有制度完整的中醫師執照考核。
-            <br>
-            且隨著綜觀整個亞州地區，也鮮少有其他國家能有如此完善的制度。
-            <br>
-            然而，根據衛生福利部統計處資料，臺灣看中醫的人數持續下降，從<b>三十</b>％降至<b>二七</b>％，平均一年減少<b>十二萬</b>人次。
-            <br>
-            其原因可能是年輕的族群對中醫不夠了解，認為中醫不科學、療效慢，緩不濟急。且中醫界也沒有到非常積極的拓展年輕客群。
-            <br>
-            最後造成的結果就是隨著時間推移，中醫逐漸不被大眾所接納。
-        </p>
-        <div class='tableauPlaceholder' id='viz1641629796776' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416285607250&#47;sheet0' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641629796776');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-        <hr>
-        <p id = "content1" style = "font-size:24pt">
-            <b>
-                Ⅱ. 探討神經及中醫科的患者女性大於男性原因
-            </b>
-        </p>
-        <p style = "font-size:18pt">
-            為了比較不同性別在同一種疾病的人數，我們使用了相並排的長條圖以利直接比較。
-            <br>
-            這樣能夠很輕鬆地在相同疾病中，比對出男女間的數量是較高或較低。
-            <br>
-            其中，<b>神經科</b>的
-            <span style = "color:red;">
-                女
-            </span>
-            性很明顯大於
-            <span style = "color:SlateBlue;">
-                男
-            </span>
-            性。於是我們查詢之後發現女性罹患失智症的比例偏高有三大原因。
-            <br>
-            第<b>一</b>是女性平均壽命較為長壽，65歲過後，每5歲就會增加一倍的風險；第<b>二</b>是受到女性在停經後缺少雌激素的作用，較容易罹患失智症；第<b>三</b>造成失智的「ApoE4基因」對女性的風險較高。
-            <br>
-            除此之外，<b>中醫</b>的
-            <span style = "color:red;">
-                女
-            </span>
-            性患者數量也大於
-            <span style = "color:SlateBlue;">
-                男
-            </span>
-            性。因為荷爾蒙失調的症狀會在女性身上更加明顯，比如說會更容易出現一些缺乏食慾、頭暈等等的症狀。
-            <br>
-            或是當經期不順、進入更年期等等情況下，許多女性也都會選擇吃中藥來調理身體。
-        </p>
-        <div class='tableauPlaceholder' id='viz1641628455472' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416284465740&#47;sheet0' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641628455472');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-        <hr>
-        <p id = "content2" style = "font-size:24pt">
-            <b>
-                Ⅲ. 冬季及換季時患者明顯增加的科別
-            </b>
-        </p>
-        <p style = "font-size:18pt">
-            為了找出患者相對比較多的月份，我們使用了能夠讓人一目了然的折線圖。
-            <br>
-            這樣能夠找出哪一個月份的患者特別多，並再根據線索找出可能會造成這一時期患者特別多的原因。
-            <br>
-            因為患者數量的關係，我們把小兒科和耳鼻喉科放在一起和家醫科比較。
-            <br>
-            我們發現
-            <span style = "color:ForestGreen;">
-                小兒科、耳鼻喉科
-            </span>
-            及
-            <span style = "color:Crimson;">
-                家醫科
-            </span>
-            在換季及冬季的時候患者明顯較多。
-            <br>
-            且根據耶魯大學的研究指出，一般感冒病毒容易在比較寒冷的天氣中生存。
-            <br>
-            以及在季節變化時，常常因為溫度差而引發季節性過敏。
-            <br>
-            根據以上，我們推論出寒冷的環境或是季節的改變是這些時期的患者特別多的主因。
-        </p>
-        <div class='tableauPlaceholder' id='viz1641630332912' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416302932540&#47;sheet2' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641630332912');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-        <!-- start from 2:40 -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/u-yiWOoVOzg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <hr>
-        <p id = "content3" style = "font-size:24pt">
-            <b>
-                Ⅳ. 名間鄉預防保健的人數比例較高之原因
-            </b>
-        </p>
-        <p style = "font-size:18pt">
-            為了比較不同地區的疾病，我們首先先把依據D1案件分類的案件分成比較大的群組，比如說像是一些西醫的疾病都統一在西醫這個類別裡。
-            <br>
-            然後再根據不同的鄉鎮市區，去區分不同疾病在相同鄉鎮的百分比率，最後再依據百分比來區分顏色，越深代表比例越高。
-            <br>
-            其中，<b>名間鄉</b>的<b>預防保健</b>的比例明顯還要高出其他鄉鎮許多。
-            <br>
-            於是查詢之後發現，在名間鄉的<b>八</b>間診所中，有<b>六</b>間提供了預防保健的服務，當地的衛生所也常常推廣要做預防保健。
-            <br>
-            另外，衛福部提供40歲以上未滿65歲的民眾每三年一次、55歲以上原住民以及65歲以上民眾的免費預防保健的服務。
-            <br>
-            再加上名間鄉交通不便，年輕人口外流嚴重，當地的居民多是年紀較大居多。埔基的官網也提到他們常常會到一些偏鄉提供預防保健的服務。
-            <br>
-            所以我們推論是這些原因就造成了預防保健的比例較高的現象。
-        </p>
-        <div class='tableauPlaceholder' id='viz1641630459791' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416304050860&#47;sheet0_1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641630459791');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.45)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>        
-        <span class = "clinic" >
-            <img src = "https://ppt.cc/f5CpIx@.jpg" width = 780 height = 500/>
-            <img src = "https://ppt.cc/fQrfex@.jpg" width = 720 height = 500 align = "right"/>
-            <!-- <img src = "https://ppt.cc/fNbpdx@.jpg" width = 720 height = 500/> -->
-        </span>
-        <hr>
-        <p id = "content4" style = "font-size:24pt">
-            <b>
-                Ⅴ. 中高年齡族群易得的疾病以及其併發症
-            </b>
-        </p>
-        <p style = "font-size:18pt">
-            為了找出哪一些年齡的族群可能會較容易得哪些疾病，我們先把每一種不同的疾病區分開來。
-            <br>
-            最後再依照患者的出生日期來區分，就能夠很輕易地找出某些疾病的高風險族群。
-            <br>
-            其中我們觀察到，
-            <span style = "color:lightCoral;">
-                結核病
-            </span>
-            的患者大多是集中在年齡較高的部分。
-            <br>
-            根據衛生福利部疾病管制署公布之年報資料，個案的年齡主要以≧65歲者為多，發生率隨著年齡增加上升。
-            <br>
-            我們的數據也符合這個論述。
-            <br>
-            除此之外，也可以觀察到
-            <span style = "color:steelBlue;">
-                西醫慢性病
-            </span>
-            的族群也是非常集中在中高齡的族群。
-            <br>
-            因為隨著年齡增長，人體的代謝速度變慢，澱粉類的代謝開始變差，澱粉過多的熱量就會轉化成油脂，堆積在血管裡面就會容易肥胖，而造成一些後續疾病。
-            <br>
-            比如說台灣最常見的就是糖尿病、高血壓。
-            <br>
-            另外，台灣腎臟衰竭原因，有九成都是慢性腎衰竭。造成慢性腎衰竭的原因除了基因之外，很大一部分是因為有其他疾病，長期的影響腎臟所引起。
-            <br>
-            所以也可以觀察到，
-            <span style = "color:orange;">
-                洗腎
-            </span>
-            的病人和
-            <span style = "color:steelBlue;">
-                西醫慢性病
-            </span>
-            的族群重疊性非常高。
-        </p>
-        <div class='tableauPlaceholder' id='viz1641895724181' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16416305171250&#47;sheet4' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1641895724181');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<!DOCTYPE html>
+<html>
+    <body>
+        <script src="C:/Users/quanbro/Desktop/Programming/Website/Test/JsTest.js"></script>
     </body>
-<hr>
-<fieldset>
-<legend>基本範例1: 讀取表單輸入值</legend>
-<form action="1.web1.py" method="post" >
-輸入查詢姓名<input type="text" name='myData'>
-<input type="submit">
-</form>
-</fieldset>
-</html>
+<body>
