--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
+        12
         <script src="C:/Users/quanbro/Desktop/Programming/Website/Test/JsTest.js"></script>
     </body>
-<body>
+</html>
