--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <body>
         123
-        <script src="C:/Users/quanbro/Desktop/Programming/Website/Test/JsTest.js"></script>
+        <h1>
+        </h1>
+        <!-- <img src = "cat.jpg" alt = "a"/> -->
+        <script type="text/javascript" src="JsTest.js"></script>
     </body>
 </html>
