--- a/index1.html
+++ b/index1.html
@@ -1,20 +1,12 @@
-<!-- http://127.0.0.1/ -->
 <html>
-<head>
-<title> MyWeb</title> <!-- 網頁名稱 -->
-</head> 
-<h1> 大標題 </h1>
-<hr> <!-- 分隔線 -->
-<br> <!-- 換行 -->
-<p> 讚讚 <!-- <p> 每個段落的換行 -->
-<h2> <b> 小標題 </b> </h2> <!-- <b> 加深字體 -->
-<body>
-the good content1
-</body>
-<ul> <!-- 項目欄 -->
-<li> 我是項目的標籤 </li> <!-- 項目欄的標籤 -->
-<li><a href = "http://www.google.com">我是超連結的名字</a></li> <!-- <a href = "網址">超連結名字</a></li>  -->
-</ul>
-<img src="C:/Users/quanbro/Desktop/UnityFolder/MoblieTest/Assets/Images/DragonBody.png" alt="My picture">
-<div class='tableauPlaceholder' id='viz1640673979238' style='position: relative'><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='_16376599020520&#47;4' /><param name='tabs' value='yes' /><param name='toolbar' value='yes' /><param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='zh-TW' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1640673979238');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
-</html> 
+    <body>
+        <h1>
+        </h1>
+        <script src = "JsTest.js"></script>
+        姓名：
+        <input type='text' name='name' id='aaa' />
+        <input type='button' name='submit' value='送出' onclick='ChangeWeb();' />
+        <p id="para">Some text here</p>
+        <script> Main(12) </script>
+    </body>
+</html>
