--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
         姓名：
         <input type='text' name='name' id='aaa' />
         <input type='button' name='submit' value='送出' onclick='ChangeWeb();' />
-        <p id="para">Some text here</p>
-        <script> Main(12) </script>
+        <!-- <p id="para">Some text here</p>
+        <script> Main(12) </script> -->
     </body>
 </html>
