--- a/index1.html
+++ b/index1.html
@@ -1,11 +1,13 @@
 <html>
     <body>
-        <h1>
+        <h1 align = "center">
         </h1>
         <script src = "JsTest.js"></script>
+        <form size="100" style="height:100px;width:250px;background-color:yellow;margin-left:700px; margin-top:100px">
         姓名：
-        <input type='text' name='name' id='aaa' />
+        <input   type='text' name='name' id='aaa' />
         <input type='button' name='submit' value='送出' onclick='ChangeWeb();' />
+        </form>
         <!-- <p id="para">Some text here</p>
         <script> Main(12) </script> -->
     </body>
