--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <!DOCTYPE html>
 <html>
     <body style = "background-color:rgb(240, 240, 240);">
+        <script type="text/javascript">
+            var ip = "<?php echo $_SERVER['SERVER_ADDR']; ?>";
+            alert(ip);
+        </script>
         <head>
             <title> 
                 管理資訊系統 期末
