--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
     <body style = "background-color:rgb(240, 240, 240);">
         <script type="text/javascript">
-            var ip = "<?php echo $_SERVER['SERVER_ADDR']; ?>";
+            var ip = location.host;
             alert(ip);
         </script>
         <head>
