--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <!DOCTYPE html>
 <html>
     <body style = "background-color:rgb(240, 240, 240);">
-        <SCRIPT LANGUAGE=Javascript>
-	str = document.location.href;
-	if (str.indexOf("http://") == 0){
-		//應該所有的網頁都會有 , 就算不keyin..browser 會自動補上
-		x = str.indexOf("/", 7);
-		// 略過 "http:// , 然後抓到第一郭 '/' 為止 , 這樣就應該是 IP 了 , 至少是 FULL DNS NAME
-		if (x == -1) x = str.length;
-		Server_IP = str.substring(7,x);
-		document.write ("Server ip = " + Server_IP + "<BR>");
-	}
-</Script>
+    <SCRIPT>
+    str = document.location.href;
+    if (str.indexOf("http://") == 0){
+        //應該所有的網頁都會有 , 就算不keyin..browser 會自動補上
+        x = str.indexOf("/", 7);
+        // 略過 "http:// , 然後抓到第一郭 '/' 為止 , 這樣就應該是 IP 了 , 至少是 FULL DNS NAME
+        if (x == -1) x = str.length;
+        Server_IP = str.substring(7,x);
+        document.write ("Server ip = " + Server_IP + "<BR>");
+        alert(Server_IP);
+    }
+    </Script>
         <head>
             <title> 
                 管理資訊系統 期末
